# Accuknox

./: README.md  pyproject.toml  requirements.txt
api_data_retrieval/: api_data_retr.py  data_store.py  main.py
csv_data_to_database/: data_store.py  main.py
data/: user_info.csv
data_process_and_visual/: main.py
