[tool.poetry]
name = "accuknox"
version = "0.1.0"
description = ""
authors = ["Surajit Ghorai <it.20203013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
